--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Hotel Miodowa" />
+  <meta name="description"
+    content="Hotel Miodowa to coś znacznie więcej, niż tylko wygodne pokoje. To zaproszenie do luksusu, który każdy z naszych Gości ma okazję doświadczyć na własnej skórze." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
